--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
       <input type="submit" name="" value="Send">
     </form>
   </div>
-  <script src="js/app.js"></script>
+  <!--<script src="assest/js/app.js"></script>-->
 </body>
 </html>
